--- a/repo/service/branches/hierarch-view-app-dgi/pom.xml
+++ b/repo/service/branches/hierarch-view-app-dgi/pom.xml
@@ -12,7 +12,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hierarch-view-app</artifactId>
+    <artifactId>hierarch-view-app-dgi</artifactId>
     <packaging>war</packaging>
     <version>1.6.0-SNAPSHOT</version>
 
