--- a/repo/service/branches/dgi/search-app-dgi/pom.xml
+++ b/repo/service/branches/dgi/search-app-dgi/pom.xml
@@ -19,7 +19,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>search-app</artifactId>
+    <artifactId>search-app-dgi</artifactId>
     <packaging>war</packaging>
     <version>1.6.0-SNAPSHOT</version>
 
