--- a/repo/service/branches/dgi/intact-site-dgi/pom.xml
+++ b/repo/service/branches/dgi/intact-site-dgi/pom.xml
@@ -19,7 +19,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     
-    <artifactId>intact-site</artifactId>
+    <artifactId>intact-site-dgi</artifactId>
     <packaging>war</packaging>
     <version>2.0.0-SNAPSHOT</version>
 
@@ -34,7 +34,7 @@
     </properties>
 
     <build>
-        <finalName>intact-site-${buildNumber}</finalName>
+        <finalName>intact-site-dgi-${buildNumber}</finalName>
 
         <resources>
             <resource>
