Added missing dependency to intact-core

--- a/repo/service/trunk/search/legacy/search-webservice/search-ws/pom.xml
+++ b/repo/service/trunk/search/legacy/search-webservice/search-ws/pom.xml
@@ -79,6 +79,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+                <groupId>uk.ac.ebi.intact.core</groupId>
+                <artifactId>intact-core</artifactId>
+        </dependency>
+
         <!-- JAX-WS -->
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
