--- a/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
@@ -72,6 +72,12 @@
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
             <version>2.0.0-SNAPSHOT</version>
+            <exclusions>
+               <exclusion>
+                   <groupId>uk.ac.ebi.pride</groupId>
+                   <artifactId>ols-client</artifactId>
+               </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- JAX-WS -->
@@ -98,6 +104,17 @@
             <artifactId>jsp-api</artifactId>
             <version>2.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.1.3</version>
         </dependency>
     </dependencies>
 
