--- a/repo/service/trunk/commons/confidence-score/pom.xml
+++ b/repo/service/trunk/commons/confidence-score/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges</groupId>
             <artifactId>intact-blast</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psi25-xml</artifactId>
-            <version>1.0-beta4</version>
+            <version>1.5.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
-            <version>1.8.0-SNAPSHOT</version>          <!--1.7.1 -->
+            <version>1.8.1-SNAPSHOT</version>          <!--1.7.1 -->
         </dependency>
 
         <!-- for xml parser -->
@@ -138,8 +138,22 @@
             <version>2.2.0</version>
         </dependency>
 
-    </dependencies>
+        <!-- for caching the GOA for uniprot (filter IEA) -->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>1.3.0</version>
+        </dependency>
 
+        <!-- just for test , remove after-->       
+        <!-- IntAct dependencies -->
+        <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psixml-exchange</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+        </dependency>
+       </dependencies>
 
     <!-- EBI repositories -->
     <repositories>
