--- a/repo/service/trunk/pom.xml
+++ b/repo/service/trunk/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
         <artifactId>intact-hibernate-master</artifactId>
-        <version>22-SNAPSHOT</version>
+        <version>23</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
