--- a/repo/sanity/trunk/intact-sanity-commons/pom.xml
+++ b/repo/sanity/trunk/intact-sanity-commons/pom.xml
@@ -17,13 +17,11 @@
      <build>
         <plugins>
             <plugin>
-                <groupId>com.sun.tools.xjc.maven2</groupId>
-                <artifactId>maven-jaxb-plugin</artifactId>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+			    <artifactId>maven-jaxb2-plugin</artifactId>
                 <configuration>
-                    <generatePackage>uk.ac.ebi.intact.sanity.commons</generatePackage>
-                    <includeSchemas>
-                        <includeSchema>**/*.xsd</includeSchema>
-                    </includeSchemas>
+                    <schemaDirectory>${project.basedir}/src/main/resources/META-INF</schemaDirectory>
+                    <bindingDirectory>${project.basedir}/src/main/resources/META-INF</bindingDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -32,19 +30,6 @@
                         </goals>
                     </execution>
                 </executions>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-impl</artifactId>
-                        <version>2.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>javax.xml.bind</groupId>
-                        <artifactId>jaxb-api</artifactId>
-                        <version>2.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
