--- a/repo/service/trunk/psicquic-webservice/pom.xml
+++ b/repo/service/trunk/psicquic-webservice/pom.xml
@@ -23,4 +23,46 @@
         <module>psicquic-wsclient</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <!-- JAX-WS -->
+            <dependency>
+                <groupId>com.sun.xml.ws</groupId>
+                <artifactId>jaxws-tools</artifactId>
+                <version>2.1.3</version>
+            </dependency>
+            <dependency>
+                <groupId>xfire</groupId>
+                <artifactId>xfire-jsr181-api</artifactId>
+                <version>1.0-M1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <!-- EBI repositories -->
+    <repositories>
+        <repository>
+            <id>ebi-repo</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>ebi-repo-snapshots</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 </project>
