--- a/repo/service/trunk/psicquic-webservice/psicquic-ws/pom.xml
+++ b/repo/service/trunk/psicquic-webservice/psicquic-ws/pom.xml
@@ -1,41 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <parent>
-    <artifactId>psicquic</artifactId>
-    <groupId>uk.ac.ebi.intact.service.psicquic</groupId>
-    <version>1.6.0-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <artifactId>psicquic</artifactId>
+        <groupId>uk.ac.ebi.intact.service.psicquic</groupId>
+        <version>1.6.0-SNAPSHOT</version>
+    </parent>
 
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>psicquic-ws</artifactId>
-  <version>1.6.0-SMAPSHOT</version>
+    <artifactId>psicquic-ws</artifactId>
+    <version>1.6.0-SMAPSHOT</version>
 
-  <name>IntAct Services :: PSICQUIC :: WS</name>
+    <name>IntAct Services :: PSICQUIC :: WS</name>
 
-  <build>
+    <build>
         <finalName>${artifactId}-${version}</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>precompile</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxws-maven-plugin</artifactId>
                 <version>1.9</version>
                 <executions>
                     <execution>
+                        <id>wsimport</id>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>wsimport</goal>
                         </goals>
@@ -47,16 +36,6 @@
                     <bindingDirectory>${project.basedir}/src/main/webapp/WEB-INF/wsdl/</bindingDirectory>
                     <verbose>true</verbose>
                 </configuration>
-
-               <!-- if you want to use a specific version of JAX-WS, you can do so like this -->
-                <dependencies>
-                    <dependency>
-                        <groupId>com.sun.xml.ws</groupId>
-                        <artifactId>jaxws-tools</artifactId>
-                        <version>2.1.3</version>
-                    </dependency>
-                </dependencies>
-
             </plugin>
         </plugins>
     </build>
@@ -69,15 +48,14 @@
         </dependency>
 
         <dependency>
-                <groupId>uk.ac.ebi.intact.core</groupId>
-                <artifactId>intact-core</artifactId>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
         </dependency>
 
         <!-- JAX-WS -->
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-tools</artifactId>
-            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.stream</groupId>
@@ -92,7 +70,6 @@
         <dependency>
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
-            <version>1.0-M1</version>
         </dependency>
 
         <dependency>
@@ -108,4 +85,30 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <!-- EBI repositories -->
+    <repositories>
+        <repository>
+            <id>ebi-repo</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>ebi-repo-snapshots</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
