--- a/repo/service/trunk/psicquic-webservice/psicquic-wsclient/pom.xml
+++ b/repo/service/trunk/psicquic-webservice/psicquic-wsclient/pom.xml
@@ -2,20 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <parent>
-    <artifactId>psicquic</artifactId>
-    <groupId>uk.ac.ebi.intact.service.psicquic</groupId>
-    <version>1.6.0-SNAPSHOT</version>
-  </parent>
-  
-  <modelVersion>4.0.0</modelVersion>
-  
-  <artifactId>psicquic-wsclient</artifactId>
-  <version>1.6.0-SMAPSHOT</version>
-  
-  <name>IntAct Services :: PSICQUIC :: WS Client</name>
-  
-  <build>
+    <parent>
+        <artifactId>psicquic</artifactId>
+        <groupId>uk.ac.ebi.intact.service.psicquic</groupId>
+        <version>1.6.0-SNAPSHOT</version>
+    </parent>
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>psicquic-wsclient</artifactId>
+    <version>1.6.0-SMAPSHOT</version>
+
+    <name>IntAct Services :: PSICQUIC :: WS Client</name>
+
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -29,27 +29,59 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <wsdlUrls>
-                        <wsdlUrl>http://localhost:9090/intact/search-ws/search?wsdl</wsdlUrl>
-                    </wsdlUrls>
+                    <extension>true</extension>
+                    <wsdlDirectory>${project.basedir}/src/main/wsdl</wsdlDirectory>
+                    <bindingDirectory>${project.basedir}/src/main/wsdl/</bindingDirectory>
+                    <verbose>true</verbose>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
+
     <dependencies>
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>psicquic-commons</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+        
         <!-- JAX-WS -->
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-tools</artifactId>
-            <version>2.1</version>
         </dependency>
         <dependency>
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
-            <version>1.0-M1</version>
         </dependency>
     </dependencies>
 
-  
+    <!-- EBI repositories -->
+    <repositories>
+        <repository>
+            <id>ebi-repo</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>ebi-repo-snapshots</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+
 </project>
