--- a/repo/service/trunk/psicquic-webservice/psicquic-ws/pom.xml
+++ b/repo/service/trunk/psicquic-webservice/psicquic-ws/pom.xml
@@ -48,8 +48,9 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.ebi.intact.core</groupId>
-            <artifactId>intact-core</artifactId>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psixml-exchange</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
         <!-- JAX-WS -->
@@ -58,10 +59,15 @@
             <artifactId>jaxws-tools</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sun.xml.stream</groupId>
-            <artifactId>sjsxp</artifactId>
-            <version>INTERNAL</version>
-        </dependency>
+    <groupId>stax</groupId>
+    <artifactId>stax</artifactId>
+    <version>1.2.0</version>
+</dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.sun.xml.stream</groupId>-->
+            <!--<artifactId>sjsxp</artifactId>-->
+            <!--<version>INTERNAL</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>jsr250-api</artifactId>
