--- a/repo/service/trunk/search/legacy/search-webservice/search-ws/pom.xml
+++ b/repo/service/trunk/search/legacy/search-webservice/search-ws/pom.xml
@@ -45,7 +45,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxws-maven-plugin</artifactId>
-                <version>1.0-beta-1-EBI-20070310</version>
                 <executions>
                     <execution>
                         <goals>
@@ -65,18 +64,32 @@
                         <artifactId>xfire-jsr181-api</artifactId>
                         <version>1.0-M1</version>
                     </dependency>
-                    <dependency>
-                        <groupId>sun.jdk</groupId>
-                        <artifactId>tools</artifactId>
-                        <version>1.5.0</version>
-                        <scope>system</scope>
-                        <systemPath>${java.home}/../lib/tools.jar</systemPath>
-                    </dependency>
                 </dependencies>
 
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+    <!-- Mac OS X has not a tools.jar! -->
+    <profile>
+      <id>tools.jar</id>
+      <activation>
+        <!-- needs maven 2.0.3 or higher under Mac OS X -->
+        <os><family>!mac</family></os>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>sun.jdk</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.5.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+
 
     <dependencies>
         <dependency>
@@ -104,13 +117,6 @@
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
             <version>1.0-M1</version>
-        </dependency>
-        <dependency>
-            <groupId>sun.jdk</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.5.0</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
 
         <dependency>
