--- a/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
@@ -225,7 +225,7 @@
      </activation>
       <dependencies>
         <dependency>
-          <groupId>com.sun</groupId>
+          <groupId>sun.jdk</groupId>
           <artifactId>tools</artifactId>
           <version>1.5.0</version>
           <scope>system</scope>
