--- a/repo/bridges/trunk/intact-citexplore/pom.xml
+++ b/repo/bridges/trunk/intact-citexplore/pom.xml
@@ -53,7 +53,7 @@
      </activation>
       <dependencies>
         <dependency>
-          <groupId>com.sun</groupId>
+          <groupId>sun.jdk</groupId>
           <artifactId>tools</artifactId>
           <version>1.5.0</version>
           <scope>system</scope>
