--- a/repo/core/branches/core-1.9.0-SNAPSHOT/intact-core/src/test/resources/log4j.properties
+++ b/repo/core/branches/core-1.9.0-SNAPSHOT/intact-core/src/test/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.category.uk.ac.ebi.intact.config=DEBUG
 log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
 log4j.category.uk.ac.ebi.intact.model.event=INFO
-log4j.category.uk.ac.ebi.intact.core.persister=INFO
+log4j.category.uk.ac.ebi.intact.core.persister=TRACE
 
 # data-exchange
 
