--- a/repo/data-exchange/branches/intact-psixml-converters-20080126/pom.xml
+++ b/repo/data-exchange/branches/intact-psixml-converters-20080126/pom.xml
@@ -22,6 +22,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
+            <version>1.9.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>psidev.psi.mi</groupId>
