--- a/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
@@ -158,14 +158,14 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.2.2</version>
+            <version>1.2.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.2.2</version>
+            <version>1.2.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
@@ -199,14 +199,14 @@
         <dependency>
             <groupId>org.apache.myfaces.trinidad</groupId>
             <artifactId>trinidad-api</artifactId>
-            <version>1.2.5</version>
+            <version>1.2.7-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.trinidad</groupId>
             <artifactId>trinidad-impl</artifactId>
-            <version>1.2.5</version>
+            <version>1.2.7-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
