- added the filter options for the confidence Tab2: ConfidenceFilter

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
@@ -43,6 +43,10 @@ sidebar.mine.section.title=Mine
 sidebar.mine.button.submit=Clear path
 sidebar.mine.button.submit.title=Clears the path provided by MiNe
 
+# Confidence filter
+result.highlight.source.submit=Filter
+result.highlight.source.submit.title=Highlight scores according to filter
+result.highlight.source.submit.button=Filter
 
 # ACTION ERRORS
 ###############
@@ -50,6 +54,11 @@ sidebar.mine.button.submit.title=Clears the path provided by MiNe
 # Used in SearchFormBean validation
 error.queryString.required=A query string is required
 error.method.required=A method is required
+
+# Used in FilterForm validation
+error.filter.score.bounded=A value between 0 and 1 (max 2 digits) required
+error.filter.score.semantic=Values (0 + > and 1 + < ) do not make sence
+error.filter.score.semantic.between=Between values do not make sence (min > max)
 
 # Use in IntactBaseAction
 error.webService=Unable to create the interaction network layout.<br>The tulip web service send the following error: {0}
