--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
@@ -56,9 +56,9 @@ error.queryString.required=A query string is required
 error.method.required=A method is required
 
 # Used in FilterForm validation
-error.filter.score.bounded=A value between 0 and 1 (max 2 digits) required
+error.filter.score.bounded=For the filtering option a threshold value between 0 and 1 (max. 2 decimals) required
 error.filter.score.semantic=Values (0 + > and 1 + < ) do not make sence
-error.filter.score.semantic.between=Between values do not make sence (min > max)
+error.filter.score.semantic.between=For the filtering option the first value has to be equal or less than the second one (min <= max)
 
 # Use in IntactBaseAction
 error.webService=Unable to create the interaction network layout.<br>The tulip web service send the following error: {0}
@@ -99,3 +99,11 @@ error.source.unusable=The specified source ({0}) is not allowed or it does not e
 ################
 
 warning.protein.notFound=Interactor not found: {0}
+
+warningTest.message=message
+warningTest.message.form=message in form
+warningTest.message.action=message in action
+warningTest.message.action.conf=message in action confidence
+warningTest.error=error
+warningTest.error.form=error in form
+warningTest.error.action=error in action
