context: After updating the dependencies ehcache seems to be annother version than used before. problem: ehcache api changed => my code needs changes solution: check that ehcache is not used any more (should not be, it was only in the test phase, but a hashMap was good enough) and clean the project of ehche - before doing that, just to be on the safe side this commit

--- a/repo/service/trunk/commons/confidence-score/pom.xml
+++ b/repo/service/trunk/commons/confidence-score/pom.xml
@@ -140,11 +140,11 @@
         </dependency>
 
         <!-- for caching the GOA for uniprot (filter IEA) -->
-        <dependency>
-            <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache</artifactId>
-            <version>1.3.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>net.sf.ehcache</groupId>-->
+            <!--<artifactId>ehcache</artifactId>-->
+            <!--<version>1.4.1</version>-->
+        <!--</dependency>-->
 
         <!-- just for test , remove after-->       
         <!-- IntAct dependencies -->
