- deleted junit.framework uses in the main/java/ - branch: 	- classes affected: AlignmentFileMaker, IntactConfidenceCalculator, Merge, ProteinAnnotationReaderImpl - deleted unused classes: EhCachePlay, GOACache, GOACacheTest, GOAFilterCacheImpl, and method GOAFilterTest.testCache
- modified GOAFilterTest to use the GOAFilterMapImpl and not GOAFilterCacheImpl, idem for InfoFiltering
- modified the initDB.csv files to contain Blub compatible information for the sequence

- added the SchemaUtils.createSchema() call before using a IntAct mock db (this is the only way how tests pass)
- added parameter testing for methods: GOAFilterMapImpl.clean, GOAFilterParseImpl

--- a/repo/service/trunk/commons/confidence-score/pom.xml
+++ b/repo/service/trunk/commons/confidence-score/pom.xml
@@ -96,7 +96,8 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.3.1</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
+            <!-- asserts are also used in the main java branch -->
         </dependency>
 
         <dependency>
