--- a/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
@@ -176,6 +176,10 @@
                     <groupId>stax</groupId>
                     <artifactId>stax</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.axis</groupId>
+                    <artifactId>axis-saaj</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
