--- a/repo/service/trunk/search/legacy/search-webservice/search-wsclient/pom.xml
+++ b/repo/service/trunk/search/legacy/search-webservice/search-wsclient/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
         <artifactId>intact-master</artifactId>
-        <version>10</version>
+        <version>13</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -70,12 +70,22 @@
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-tools</artifactId>
-            <version>2.1</version>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
             <version>1.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.1.3</version>
         </dependency>
     </dependencies>
 
