Using a filtered web.xml

--- a/repo/service/trunk/search/legacy/search-app/pom.xml
+++ b/repo/service/trunk/search/legacy/search-app/pom.xml
@@ -31,6 +31,20 @@
         <jetty.port>8081</jetty.port>
     </properties>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/webapp-filtered</directory>
+                <filtering>true</filtering>
+                <targetPath>../../src/main/webapp</targetPath>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
