Using a filtered web.xml

--- a/repo/service/trunk/editor/editor-app/pom.xml
+++ b/repo/service/trunk/editor/editor-app/pom.xml
@@ -27,6 +27,18 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/webapp-filtered</directory>
+                <filtering>true</filtering>
+                <targetPath>../../src/main/webapp</targetPath>
+            </resource>
+        </resources>
+        
         <plugins>
             <plugin>
                 <groupId>uk.ac.ebi.intact.editor</groupId>
