--- a/repo/service/trunk/graph2mif/graph2mif-server/pom.xml
+++ b/repo/service/trunk/graph2mif/graph2mif-server/pom.xml
@@ -27,6 +27,18 @@
     <description>Graph2MIF Web Service</description>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/webapp-filtered</directory>
+                <filtering>true</filtering>
+                <targetPath>../../src/main/webapp</targetPath>
+            </resource>
+        </resources>
+        
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
