--- a/repo/service/trunk/graph2mif/graph2mif-server/src/main/webapp-filtered/WEB-INF/web.xml
+++ b/repo/service/trunk/graph2mif/graph2mif-server/src/main/webapp-filtered/WEB-INF/web.xml
@@ -11,6 +11,11 @@
 
     <!-- IntAct Init parameters -->
     <context-param>
+        <param-name>intact.APPLICATION_ROOT</param-name>
+        <param-value>${appRoot}</param-value>
+    </context-param>
+    
+    <context-param>
         <param-name>uk.ac.ebi.intact.AC_PREFIX</param-name>
         <param-value>EBI</param-value>
         <description>
