--- a/repo/service/trunk/commons/confidence-score-train-model-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-train-model-plugin/pom.xml
@@ -10,40 +10,14 @@
 
     <artifactId>confidence-score-train-model-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>confidence-score-train-model-plugin</name>
-    <url>http://maven.apache.org</url>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>maven-buildnumber-plugin</artifactId>
-                <version>0.9.4</version>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <format>{0,date,yyyyMMdd}</format>
-                    <items>
-                        <item>timestamp</item>
-                    </items>
-                </configuration>
-            </plugin>
-        </plugins>
-
-    </build>
+    <version>1.6.0-SNAPSHOT</version>
+	<name>IntAct Services :: Commons :: Confidence :: Plugin :: Train Model Maven Plugin</name>
 
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.intact.plugins</groupId>
             <artifactId>intact-plugin</artifactId>
-            <version>1.6.1</version>
+            <version>2.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -56,7 +30,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.service.commons</groupId>
             <artifactId>confidence-score</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>${pom.version}</version>
         </dependency>
 
         <dependency>
