--- a/repo/service/trunk/commons/confidence-score-fillDb-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-fillDb-plugin/pom.xml
@@ -10,15 +10,14 @@
 
     <artifactId>confidence-fillDb-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>Confidence FillDb Maven plugin</name>
-    <url>http://maven.apache.org</url>
+    <version>1.6.0-SNAPSHOT</version>
+    <name>IntAct Services :: Commons :: Confidence :: Plugin :: FillDb Maven Plugin</name>
 
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.intact.plugins</groupId>
             <artifactId>intact-plugin</artifactId>
-            <version>1.6.1</version>
+            <version>2.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -31,7 +30,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.service.commons</groupId>
             <artifactId>confidence-score</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>${pom.version}</version>
         </dependency>
 
         <dependency>
