--- a/repo/service/trunk/commons/confidence-score-maven-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-maven-plugin/pom.xml
@@ -13,36 +13,35 @@
 	<!-- 	<groupId>uk.ac.ebi.intact.confidence.plugin</groupId> -->
 	<artifactId>confidence-score-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<name>Confidence Score Maven plugin</name>
+	<version>1.6.0-SNAPSHOT</version>
+	<name>IntAct Services :: Commons :: Confidence :: Plugin :: Score Maven Plugin</name>
 
-	<dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.plugins</groupId>
+            <artifactId>intact-plugin</artifactId>
+            <version>2.1-SNAPSHOT</version>
+        </dependency>
 
-		<dependency>
-			<groupId>uk.ac.ebi.intact.plugins</groupId>
-			<artifactId>intact-plugin</artifactId>
-			<version>1.6.1</version>
-		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.3.1</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.3.1</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.service.commons</groupId>
+            <artifactId>confidence-score</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>uk.ac.ebi.intact.service.commons</groupId>
-			<artifactId>confidence-score</artifactId>
-			<version>1.6.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-plugin-api</artifactId>
-			<version>2.0</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+    </dependencies>
 
 	<!-- EBI repositories -->
 	<repositories>
