--- a/repo/service/trunk/commons/confidence-score-psimixml-maven-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-psimixml-maven-plugin/pom.xml
@@ -12,36 +12,34 @@
 
     <artifactId>confidence-score-psimixml-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>confidence-score-psimixml-maven-plugin</name>
-
-    <url>http://maven.apache.org</url>
+    <version>1.6.0-SNAPSHOT</version>
+	<name>IntAct Services :: Commons :: Confidence :: Plugin :: PSIXML Maven Plugin</name>
 
     <dependencies>
-      <dependency>
-			<groupId>uk.ac.ebi.intact.plugins</groupId>
-			<artifactId>intact-plugin</artifactId>
-			<version>1.6.1</version>
-		</dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.plugins</groupId>
+            <artifactId>intact-plugin</artifactId>
+            <version>2.1-SNAPSHOT</version>
+        </dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.3.1</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.3.1</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>uk.ac.ebi.intact.service.commons</groupId>
-			<artifactId>confidence-score</artifactId>
-			<version>1.6.0-SNAPSHOT</version>
-		</dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.service.commons</groupId>
+            <artifactId>confidence-score</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-plugin-api</artifactId>
-			<version>2.0</version>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
      <!-- EBI repositories -->
