InteractorFetcherTest was breaking all the test, when initializing a CacheManager with default configuration and never calling shutdown

--- a/repo/data-exchange/trunk/intact-enricher/pom.xml
+++ b/repo/data-exchange/trunk/intact-enricher/pom.xml
@@ -27,6 +27,12 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
+            <exclusions>
+            <exclusion>
+                    <groupId>ehcache</groupId>
+                    <artifactId>ehcache</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
@@ -68,7 +74,7 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-            <version>1.3.0</version>
+            <version>1.4.1</version>
         </dependency>
 
     </dependencies>
