IAE-152 (canot add go terms) - QuickGO does not support anymore the way we were getting the go data from them. This has been replaced to use OLS instead

--- a/repo/service/trunk/editor/editor-app/pom.xml
+++ b/repo/service/trunk/editor/editor-app/pom.xml
@@ -121,15 +121,9 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
+            <groupId>uk.ac.ebi.intact.bridges</groupId>
             <artifactId>intact-go</artifactId>
-            <version>2.0.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>cglib</groupId>
-                    <artifactId>cglib-full</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
