Fixed compilation and dependencies issue (projects refered to themselves cannot be released)

--- a/repo/sanity/trunk/intact-sanity-check/pom.xml
+++ b/repo/sanity/trunk/intact-sanity-check/pom.xml
@@ -20,12 +20,14 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.sanity</groupId>
             <artifactId>intact-sanity-rules</artifactId>
+            <version>${pom.version}</version>
         </dependency>
 
         <!-- IntAct deps -->
         <dependency>
             <groupId>uk.ac.ebi.intact.commons</groupId>
             <artifactId>intact-commons</artifactId>
+            <version>${pom.version}</version>
         </dependency>
   
         <!-- Third party deps-->
