--- a/repo/sanity/trunk/intact-sanity-rules/pom.xml
+++ b/repo/sanity/trunk/intact-sanity-rules/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.sanity</groupId>
             <artifactId>intact-sanity-commons</artifactId>
+            <version>${pom.version}</version>
         </dependency>
 
         <dependency>
