--- a/repo/sanity/trunk/sanity-maven-plugin/pom.xml
+++ b/repo/sanity/trunk/sanity-maven-plugin/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.sanity</groupId>
             <artifactId>intact-sanity-check</artifactId>
+            <version>${pom.version}</version>
         </dependency>
 
         <dependency>
