Updated versioning of dependencies for this group to be handled by each module

--- a/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
+++ b/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psixml-exchange</artifactId>
+            <version>${pom.version}</version>
         </dependency>
 
         <!--<dependency>-->
