--- a/repo/data-exchange/trunk/imex/intact-imex-import/pom.xml
+++ b/repo/data-exchange/trunk/imex/intact-imex-import/pom.xml
@@ -17,12 +17,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-            <artifactId>intact-psixml-exchange</artifactId>
-        </dependency>
-        <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.imex</groupId>
             <artifactId>intact-imex-repository</artifactId>
+            <version>${pom.version}</version>
         </dependency>
 
         <dependency>
