--- a/repo/data-exchange/trunk/intact-enricher/pom.xml
+++ b/repo/data-exchange/trunk/intact-enricher/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange</groupId>
             <artifactId>intact-cvutils</artifactId>
+            <version>${pom.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
