--- a/repo/data-exchange/trunk/pom.xml
+++ b/repo/data-exchange/trunk/pom.xml
@@ -19,7 +19,6 @@
     <url>http://www.ebi.ac.uk/~intact/devsite/dataexchange</url>
 
     <properties>
-        <currentVersion>${version}</currentVersion>
         <version.core>1.8.2</version.core>
     </properties>
 
@@ -67,62 +66,7 @@
             <dependency>
                 <groupId>uk.ac.ebi.intact.commons</groupId>
                 <artifactId>intact-commons</artifactId>
-                <version>2.1.3-SNAPSHOT</version>
-            </dependency>
-
-            <!-- submodules -->
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange</groupId>
-                <artifactId>intact-cvutils</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange</groupId>
-                <artifactId>intact-dbutils</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange.plugins</groupId>
-                <artifactId>cv-maven-plugin</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-                <artifactId>intact-psixml-processor</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-                <artifactId>intact-psixml-converters</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-                <artifactId>intact-psixml-enricher</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-                <artifactId>intact-psixml-upload-extensions</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-             <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-                <artifactId>intact-psixml-exchange</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dataexchange</groupId>
-                <artifactId>intact-enricher</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-
-            <!-- test datasets -->
-            <dependency>
-                <groupId>uk.ac.ebi.intact.datasets</groupId>
-                <artifactId>intact-dataset</artifactId>
-                <version>1.6.0-beta-2-SNAPSHOT</version>
-                <scope>test</scope>
+                <version>2.1.3</version>
             </dependency>
 
             <!-- Other dependencies -->
