[maven-release-plugin] prepare for next development iteration

--- a/repo/data-exchange/trunk/plugins/pom.xml
+++ b/repo/data-exchange/trunk/plugins/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange</groupId>
         <artifactId>dataexchange-master</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.dataexchange.plugins</groupId>
     <artifactId>plugins-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: Plugins</name>
     <description>Data Exchange Plugins</description>
