--- a/repo/data-exchange/trunk/ebeye/pom.xml
+++ b/repo/data-exchange/trunk/ebeye/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange</groupId>
         <artifactId>dataexchange-master</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.dataexchange.ebeye</groupId>
     <artifactId>ebeye</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: EB-eye</name>
     <description>EB-eye Master POM</description>
