--- a/repo/data-exchange/trunk/psimi/legacy/data-conversion/pom.xml
+++ b/repo/data-exchange/trunk/psimi/legacy/data-conversion/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi.legacy</groupId>
     	<artifactId>legacy-master</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-conversion</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: PSI MI :: Legacy :: Data Conversion</name>
     <description>Import/Exports from/to PSI files</description>
