--- a/repo/data-exchange/trunk/psimi/legacy/pom.xml
+++ b/repo/data-exchange/trunk/psimi/legacy/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
         <artifactId>psimi-master</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.dataexchange.psimi.legacy</groupId>
     <artifactId>legacy-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
 
     <name>IntAct Data Exchange :: PSI MI :: Legacy</name>
     <description>PSI MI Legacy Master POM</description>
