--- a/repo/editor/maven-editortopics-plugin/trunk/pom.xml
+++ b/repo/editor/maven-editortopics-plugin/trunk/pom.xml
@@ -1,17 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.intact.editor</groupId>
     <artifactId>maven-editortopics-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
     
     <name>Plugin - Editor Topics plugin</name>
     <description>
@@ -20,9 +19,9 @@
     <url>http://www.ebi.ac.uk/~intact/devsite/maven-plugins/${artifactId}</url>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/editor/maven-editortopics-plugin/trunk</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/editor/maven-editortopics-plugin/trunk</developerConnection>
-        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/editor/maven-editortopics-plugin/trunk/</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/editor/maven-editortopics-plugin/tags/plugins-miscel-1.6.0</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/editor/maven-editortopics-plugin/tags/plugins-miscel-1.6.0</developerConnection>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/editor/maven-editortopics-plugin/tags/plugins-miscel-1.6.0</url>
     </scm>
 
     <reporting>
