--- a/repo/maven-plugins/psimitab-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/psimitab-maven-plugin/trunk/pom.xml
@@ -5,21 +5,21 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0</version>
     </parent>
 
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>psimitab-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
     
     <name>psimitab-maven-plugin Maven Mojo</name>
     <url>http://www.ebi.ac.uk/~intact/devsite/maven-plugins/${artifactId}</url>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-maven-plugin/trunk</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-maven-plugin/trunk</developerConnection>
-        <url>http://svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-maven-plugin/trunk</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-maven-plugin/tags/plugins-miscel-1.6.0</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-maven-plugin/tags/plugins-miscel-1.6.0</developerConnection>
+        <url>http://svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-maven-plugin/tags/plugins-miscel-1.6.0</url>
     </scm>
 
     <dependencies>
