--- a/repo/maven-plugins/psixml-generator-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/psixml-generator-maven-plugin/trunk/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>psixml-generator-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
 
     <name>Plugin - PSI XML Generator</name>
     <description>
@@ -19,9 +19,9 @@
     <url>http://www.ebi.ac.uk/~intact/devsite/maven-plugins/${artifactId}</url>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psixml-generator-maven-plugin/trunk</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psixml-generator-maven-plugin/trunk</developerConnection>
-        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/maven-psixml-generator/trunk</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psixml-generator-maven-plugin/tags/plugins-miscel-1.6.0</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psixml-generator-maven-plugin/tags/plugins-miscel-1.6.0</developerConnection>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/maven-psixml-generator/tags/plugins-miscel-1.6.0</url>
     </scm>
 
     <dependencies>
